# neurosense

./: .gitignore  README.md  pyproject.toml
.test/data/: prepare_summary.json  train_triplets_round2_10k.summary.json
.test/data/benchmarks/fiqa/: corpus.jsonl  queries.jsonl
.test/data/benchmarks/nfcorpus/: corpus.jsonl  queries.jsonl
.test/data/benchmarks/scifact/: corpus.jsonl  queries.jsonl
.test/results/: baseline_allMiniLM.json  baseline_bgeSmall.json  baseline_e5Small_prefixed.json  baseline_neurosense.json  metrics_summary.json  retrieval_samples_baseline.json  round1_neurosense.json  round2_neurosense.json  round3_neurosense.json
.test/scripts/: evaluate_benchmark.py  mine_hard_negatives.py  prepare_data.py
data/sample/: corpus.jsonl  queries.jsonl  texts.txt  train.jsonl
src/neurosense/: __init__.py  data.py  embed.py  evaluate.py  model_card.py  publish.py  train.py
