[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neurosense-embed"
version = "0.1.0"
description = "Neurosense: an embedding SLM pipeline for semantic search"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Neurosense Team" }]
dependencies = [
  "sentence-transformers>=3.0.1,<4.0.0",
  "torch>=2.2.0",
  "datasets>=2.18.0",
  "accelerate>=0.26.0",
  "huggingface-hub>=0.27.0",
  "tqdm>=4.66.0",
]

[project.scripts]
neurosense-train = "neurosense.train:main"
neurosense-eval = "neurosense.evaluate:main"
neurosense-embed = "neurosense.embed:main"
neurosense-publish = "neurosense.publish:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
